--- a/pom.xml
+++ b/pom.xml
@@ -114,16 +114,6 @@
           <groupId>org.eclipse.tycho</groupId>
           <artifactId>tycho-packaging-plugin</artifactId>
           <version>${tycho-version}</version>
-          <dependencies>
-           <dependency>
-             <groupId>org.eclipse.tycho.extras</groupId>
-             <artifactId>tycho-buildtimestamp-jgit</artifactId>
-             <version>${tycho-version}</version>
-           </dependency>
-         </dependencies>
-         <configuration>
-           <timestampProvider>jgit</timestampProvider>
-         </configuration>
         </plugin>
         <plugin>
           <groupId>org.eclipse.tycho</groupId>
@@ -252,6 +242,21 @@
               </target>
               <resolver>p2</resolver>
             </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.eclipse.tycho</groupId>
+            <artifactId>tycho-packaging-plugin</artifactId>
+            <version>${tycho-version}</version>
+            <dependencies>
+             <dependency>
+               <groupId>org.eclipse.tycho.extras</groupId>
+               <artifactId>tycho-buildtimestamp-jgit</artifactId>
+               <version>${tycho-version}</version>
+             </dependency>
+           </dependencies>
+           <configuration>
+             <timestampProvider>jgit</timestampProvider>
+           </configuration>
           </plugin>
         </plugins>
       </build>
