--- a/org.eclipse.cbi.targetplatform-feature/pom.xml
+++ b/org.eclipse.cbi.targetplatform-feature/pom.xml
@@ -7,6 +7,6 @@
     <groupId>org.eclipse.cbi.targetplatform</groupId>
     <version>3.0.0-SNAPSHOT</version>
   </parent>
-  <artifactId>org.eclipse.cbi.targetplatform-feature</artifactId>
+  <artifactId>org.eclipse.cbi.targetplatform.feature</artifactId>
   <packaging>eclipse-feature</packaging>
 </project>
