--- a/pom.xml
+++ b/pom.xml
@@ -27,15 +27,48 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <tycho-version>1.7.0</tycho-version>
-    <xtext-version>2.14.0</xtext-version>
+    <tycho-version>2.7.4</tycho-version>
+    <xtext-version>2.27.0</xtext-version>
+    <cbi-plugins.version>1.3.1</cbi-plugins.version>
     <os-jvm-flags/>
+    <eclipse-repo.url>https://repo.eclipse.org/content/repositories/cbi/</eclipse-repo.url>
+    <!-- comment out snapshots repo, when not intending to use snapshots. releases come from "eclipse-repo.url"
+      <cbi-snapshots-repo.url>https://repo.eclipse.org/content/repositories/cbi-snapshots/</cbi-snapshots-repo.url>
+    -->
+    <!-- 
+    <tycho-snapshots>https://repo.eclipse.org/content/repositories/tycho-snapshots/</tycho-snapshots>
+     -->
   </properties>
 
   <modules>
     <module>org.eclipse.cbi.targetplatform.tests</module>
     <module>org.eclipse.cbi.targetplatform.ui.tests</module>
   </modules>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>eclipse</id>
+      <url>${eclipse-repo.url}</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </pluginRepository>
+    <!-- 
+    <pluginRepository>
+      <id>tycho-snapshots</id>
+      <url>${tycho-snapshots}</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+     -->
+  </pluginRepositories>
 
   <build>
     <pluginManagement>
@@ -88,7 +121,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>exec-maven-plugin</artifactId>
-          <version>1.6.0</version>
+          <version>3.1.0</version>
         </plugin>
         <plugin>
           <groupId>org.eclipse.tycho</groupId>
@@ -179,28 +212,6 @@
           <configuration>
             <outputDirectory>target/generated-sources/xtend</outputDirectory>
           </configuration>
-          <dependencies>
-            <dependency>
-              <groupId>org.eclipse.platform</groupId>
-              <artifactId>org.eclipse.equinox.common</artifactId>
-              <version>3.10.0</version>
-            </dependency>
-            <dependency>
-              <groupId>org.eclipse.jdt</groupId>
-              <artifactId>org.eclipse.jdt.core</artifactId>
-              <version>3.13.102</version>
-            </dependency>
-            <dependency>
-              <groupId>org.eclipse.jdt</groupId>
-              <artifactId>org.eclipse.jdt.debug</artifactId>
-              <version>3.10.1</version>
-            </dependency>
-            <dependency>
-              <groupId>org.eclipse.jdt</groupId>
-              <artifactId>org.eclipse.jdt.launching</artifactId>
-              <version>3.10.0</version>
-            </dependency>
-          </dependencies>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -270,6 +281,8 @@
             </dependencies>
             <configuration>
               <timestampProvider>jgit</timestampProvider>
+              <jgit.ignore>pom.xml .gitignore .launchers/**</jgit.ignore>
+              <jgit.dirtyWorkingTree>warning</jgit.dirtyWorkingTree>
             </configuration>
           </plugin>
         </plugins>
@@ -399,6 +412,44 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+
+    <profile>
+      <id>eclipse-sign</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.eclipse.cbi.maven.plugins</groupId>
+            <artifactId>eclipse-jarsigner-plugin</artifactId>
+            <version>${cbi-plugins.version}</version>
+            <executions>
+              <execution>
+                <id>sign</id>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+                <phase>verify</phase>
+              </execution>
+            </executions>
+            <configuration>
+              <excludeInnerJars>${defaultSigning-excludeInnerJars}</excludeInnerJars>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>promote</id>
+      <activation>
+        <property>
+          <name>promote</name>
+          <value>!false</value>
+        </property>
+      </activation>
+      <modules>
+        <module>promotion</module>
+      </modules>
     </profile>
   </profiles>
 </project>
