Use Eclipse 2.0 license feature and migrate all sources to EPL 2.0
Install the TPD tool in the setup to be able to regenerate the target
platform easily.

Use the Eclipse CBI branding image.

https://github.com/eclipse-cbi/targetplatform-dsl/issues/31

--- a/org.eclipse.cbi.targetplatform/build.properties
+++ b/org.eclipse.cbi.targetplatform/build.properties
@@ -6,7 +6,7 @@ bin.includes = .,\
                about.ini,\
                about.mappings,\
                about.properties,\
-               eclipse32.png
+               cbi32.png
 source.. = src/main/java,\
            src/gen/xtext,\
            target/generated-sources/xtend
@@ -15,7 +15,7 @@ src.includes = about.html,\
                about.ini,\
                about.mappings,\
                about.properties,\
-               eclipse32.png
+               cbi32.png
 additional.bundles = org.eclipse.xtext.xbase,\
                      org.eclipse.xtext.common.types,\
                      org.eclipse.xtext.xtext.generator,\
