--- a/org.eclipse.cbi.targetplatform-feature/build.properties
+++ b/org.eclipse.cbi.targetplatform-feature/build.properties
@@ -1,18 +1,14 @@
-################################################################################
 # Copyright (c) 2012, 2013 Obeo and others.
-# All rights reserved. This program and the accompanying materials
-# are made available under the terms of the Eclipse Public License v1.0
+# This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
-# http://www.eclipse.org/legal/epl-v10.html
+# https://www.eclipse.org/legal/epl-2.0/
+#
+# SPDX-License-Identifier: EPL-2.0
 # 
 # Contributors:
 #     Mikael Barbero (Obeo) - initial API and implementation
-################################################################################
-bin.includes = epl-v10.html,\
-               feature.properties,\
+
+bin.includes = feature.properties,\
                feature.xml,\
-               license.html,\
-               copyright.txt,\
-               about.html,\
-               eclipse32.png,\
                p2.inf
