--- a/org.eclipse.cbi.targetplatform.ide/plugin.properties
+++ b/org.eclipse.cbi.targetplatform.ide/plugin.properties
@@ -1,3 +1,15 @@
+# Copyright (c) 2012 Obeo and others.
+# 
+# This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License 2.0
+# which accompanies this distribution, and is available at
+# https://www.eclipse.org/legal/epl-2.0/
+# 
+# SPDX-License-Identifier: EPL-2.0
+#
+# Contributors:
+#     Mikael Barbero (Obeo) - initial API and implementation
+
 pluginName = Target Platform DSL and Generator (IDE integration)
-providerName = Eclipse.org
+providerName = Eclipse CBI
 
