--- a/org.eclipse.cbi.targetplatform/about.ini
+++ b/org.eclipse.cbi.targetplatform/about.ini
@@ -8,7 +8,7 @@
 aboutText=%featureText
 
 # Property "featureImage" contains path to feature image (32x32)
-featureImage=eclipse32.png
+featureImage=cbi32.png
 
 # Property "appName" contains name of the application (translated)
 appName=%featureName
