--- a/org.eclipse.cbi.targetplatform.tests/build.properties
+++ b/org.eclipse.cbi.targetplatform.tests/build.properties
@@ -4,4 +4,6 @@ source.. = src/main/java,\
 bin.includes = META-INF/,\
                .,\
                plugin.properties
-additional.bundles = org.eclipse.jdt.core
+additional.bundles = org.eclipse.jdt.core,\
+                     org.eclipse.debug.core
+
