fix workspace setup after Eclipse 2024-03 release
- org.eclipse.xtext.generator is gone, the migration was done already
- org.eclipse.xtext.xtext.generator requires slf4j.api now
- MWE2 launch fails when Java 8 is found, requires at least Java 11
- Use com.google.inject.Inject because javax.inject.Inject fails Tycho
- IMetadataRepository now declares removeReference()
- Update Tycho to 4.0.6
- Update promotion to use https://download.eclipse.org/releases/latest
- Update default target platform to 2024-03 and other new release
- Update setup to configure Java 17.

--- a/org.eclipse.cbi.targetplatform/build.properties
+++ b/org.eclipse.cbi.targetplatform/build.properties
@@ -25,7 +25,6 @@ additional.bundles = org.eclipse.xtext.xbase,\
                      org.eclipse.emf.mwe2.lib,\
                      org.objectweb.asm,\
                      org.apache.commons.logging,\
-                     org.apache.log4j,\
+                     slf4j.api,\
                      com.ibm.icu,\
-                     org.eclipse.emf.ecore.xcore,\
-                     org.eclipse.xtext.generator
+                     org.eclipse.emf.ecore.xcore
