--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <tycho-version>2.7.5</tycho-version>
-    <xtext-version>2.27.0</xtext-version>
+    <tycho-version>4.0.6</tycho-version>
+    <xtext-version>2.34.0</xtext-version>
     <cbi-plugins.version>1.3.4</cbi-plugins.version>
     <os-jvm-flags/>
     <eclipse-repo.url>https://repo.eclipse.org/content/repositories/cbi/</eclipse-repo.url>
@@ -288,7 +288,7 @@
             <artifactId>tycho-packaging-plugin</artifactId>
             <dependencies>
               <dependency>
-                <groupId>org.eclipse.tycho.extras</groupId>
+                <groupId>org.eclipse.tycho</groupId>
                 <artifactId>tycho-buildtimestamp-jgit</artifactId>
                 <version>${tycho-version}</version>
               </dependency>
