--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,15 @@
 
   <licenses>
     <license>
-      <name>Eclipse Public License 2.0</name>
+      <name>EPL-2</name>
+      <url>https://www.eclipse.org/legal/epl-2.0</url>
       <comments>
         This program and the accompanying materials
         are made available under the terms of the Eclipse Public License 2.0
         which accompanies this distribution, and is available at
         https://www.eclipse.org/legal/epl-2.0/
 
-       SPDX-License-Identifier: EPL-2.0
+        SPDX-License-Identifier: EPL-2.0
       </comments>
     </license>
   </licenses>
