--- a/org.eclipse.cbi.targetplatform/build.properties
+++ b/org.eclipse.cbi.targetplatform/build.properties
@@ -24,7 +24,7 @@ additional.bundles = org.eclipse.xtext.xbase,\
                      org.eclipse.emf.mwe2.launch,\
                      org.eclipse.emf.mwe2.lib,\
                      org.objectweb.asm,\
-                     org.apache.commons.logging,\
+                     org.apache.commons.commons-logging,\
                      slf4j.api,\
                      com.ibm.icu,\
                      org.eclipse.emf.ecore.xcore
