--- a/org.eclipse.cbi.targetplatform.ui/.settings/org.eclipse.xtend.core.Xtend.prefs
+++ b/org.eclipse.cbi.targetplatform.ui/.settings/org.eclipse.xtend.core.Xtend.prefs
@@ -6,7 +6,7 @@ generateGeneratedAnnotation=true
 generateSuppressWarnings=true
 generatedAnnotationComment=
 includeDateInGenerated=false
-outlet.DEFAULT_OUTPUT.cleanDirectory=true
+outlet.DEFAULT_OUTPUT.cleanDirectory=false
 outlet.DEFAULT_OUTPUT.cleanupDerived=true
 outlet.DEFAULT_OUTPUT.createDirectory=true
 outlet.DEFAULT_OUTPUT.derived=true
